Updated the CDN URLs to the latest version

--- a/example.html
+++ b/example.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
   <title>dropdown-checkboxes</title>
 
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="./src/dropdownCheckboxes.css">
   <!-- For production use the minified CSS -->
   <!-- <link rel="stylesheet" href="./src/dropdownCheckboxes.min.css"> -->
@@ -27,7 +27,6 @@
     <HR>
 
     <div class='container'>
-
       <h1>dropdown-checkboxes</h1><BR>
 
       <form class='myform'>
@@ -174,7 +173,7 @@
 <script src="./src/dropdownCheckboxes.js"></script>
 <!-- For production use the minified JS -->
 <!-- <script src="./src/dropdownCheckboxes.min.js"></script> -->
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="//stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
